--- a/views/formlogin.handlebars
+++ b/views/formlogin.handlebars
@@ -9,7 +9,7 @@
   <div class="col-md-6 col-sm-12">
     {{#each errors}}
 
-    <div class="alert alert-danger z-index-1">{{text}}</div>
+    <div class="alert alert-danger">{{text}}</div>
 
     {{else}}
 
